# OceWidget

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OceWidget.cpp  OceWidget.h  README.md  main.cpp
